<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@color/text_white">
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
          <Button
            android:id="@id/btn_1"
            style="@style/rectangle_line_blue"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:background="@null"
            android:text="@string/more_language" 
            android:layout_centerVertical="true"/>
          <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:orientation="horizontal"
            >
            <com.sinoglobal.app.widget.SlipButton android:id="@id/side_bar" android:layout_width="wrap_content" android:layout_height="30dp"
              android:layout_alignParentRight="true" android:layout_centerVertical="true" 
              android:layout_marginRight="8dp"/>
          </LinearLayout>
          
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_blue" />

        <Button
            android:id="@id/btn_2"
            style="@style/rectangle_line_blue"
            android:background="@null"
            android:text="@string/more_questionnaire" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_blue" />

        <Button
            android:id="@id/btn_3"
            style="@style/rectangle_line_blue"
            android:background="@null"
            android:text="@string/more_book" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_blue" />

        <Button
            android:id="@id/btn_4"
            style="@style/rectangle_line_blue"
            android:background="@null"
            android:text="@string/more_link" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_blue" />

        <Button
            android:id="@id/btn_5"
            style="@style/rectangle_line_blue"
            android:background="@null"
            android:text="@string/more_version" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_blue" />

        <Button
            android:id="@id/btn_6"
            style="@style/rectangle_line_blue"
            android:background="@null"
            android:text="@string/more_about" />
    </LinearLayout>

</ScrollView>
<View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
</LinearLayout>